# vibe-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  TODOs.md  config.json  main.py  pyproject.toml  requirements.txt
claude/: README.md  cli_bridge.py  profile_analyzer.py  sdk_client.py  suggestion_engine.py
coding_agent_documentation/: claude_cli.md  claude_cmds.md  claude_env.md  claude_hook.md  claude_inter.md  claude_plug.md  claude_tool.md  codex.md  cursor.md
core/: openclaw_config.py  openclaw_gateway.py  project_manager.py  session_store.py  ssh_mount.py
graph/: README.md  knowledge_graph.py  personalization_graph.py
man/: vibe.1
memory/: README.md  brain_importer.py  compactor.py  linker.py  linter.py  moc.py  note.py  obsidian.py  project_registry.py  run_log.py  user_profile.py  vault.py
personalization/: predictor.py
scripts/: update_docs.py
terminal/: README.md  agent_session.py  approval_server.py  claude_session.py  codex_session.py  cursor_session.py  openclaw_session.py  pty_widget.py
tests/: conftest.py  test_agent_session.py  test_app_widgets.py  test_claude_session.py  test_codex_session.py  test_cursor_session.py  test_integration.py  test_knowledge_graph.py  test_linker_linter.py  test_memory_vault.py  test_note.py  test_personalization_graph.py  test_profile_analyzer.py  test_project_manager.py  test_refactoring.py  test_run_log.py  test_session_store_predictor.py  test_suggestion_engine.py  test_user_profile.py
textual_documentation/: documentation_links.txt
ui/: README.md  app.py  app_slash.py  constants.py  (+3 more)
(+6 files in other folders)
