[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-cli"
version = "0.1.0"
description = "Keyboard-first multi-project AI coding terminal"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0",
    "anthropic>=0.30.0",
    "networkx>=3.1",
    "python-frontmatter>=1.0.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "pyte>=0.8.0",
    "ptyprocess>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
vibe = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "unused*", "vault*", "newproj*"]
